--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mui/material": "^5.15.2",
     "bootstrap": "^5.3.2",
     "next": "14.0.4",
     "react": "^18",
     "react-bootstrap": "^2.9.1",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "mdb-react-ui-kit": "7.0.0"
   }
 }
