--- a/package.json
+++ b/package.json
@@ -6,15 +6,20 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "vitest"
   },
   "dependencies": {
-    "@mui/material": "^5.15.2",
     "bootstrap": "^5.3.2",
     "next": "14.0.4",
     "react": "^18",
     "react-bootstrap": "^2.9.1",
-    "react-dom": "^18",
-    "mdb-react-ui-kit": "7.0.0"
+    "react-dom": "^18"
+  },
+  "devDependencies": {
+    "@testing-library/react": "^14.1.2",
+    "@vitejs/plugin-react": "^4.2.1",
+    "jsdom": "^23.1.0",
+    "vitest": "^1.1.3"
   }
 }
